Ajout de l'URL canonique

--- a/themes/mybook/layouts/partials/docs/email-footer.html
+++ b/themes/mybook/layouts/partials/docs/email-footer.html
@@ -4,6 +4,6 @@
         (courriel : <img style="height: 1.5em; padding-bottom: 0.2em" src="{{ .Site.Params.ContactEMailFile }}" alt="{{ .Site.Params.ContactEMailAlt }}" />).
     </div>
     <div class="last-modif">
-        Dernière modification de la page : {{.Lastmod}} (révision {{.GitInfo.AbbreviatedHash}}).
+        Dernière modification de la page : {{.Lastmod}} (révision {{.GitInfo.AbbreviatedHash}}). <a href="{{ .Site.Params.BookGitURL }}">Code source.</a>
     </div>
 </div>
