--- a/themes/mybook/layouts/partials/docs/html-head.html
+++ b/themes/mybook/layouts/partials/docs/html-head.html
@@ -1,7 +1,11 @@
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{- template "title" . }} | {{ .Site.Title -}}</title>
-
+<link rel="canonical" href="{{ .Site.Params.CanonicalBaseURL }}{{ path.Join .RelPermalink }}">
+{{ if (and .Site.Params.RedirectToCanonical (ne .Site.BaseURL .Site.Params.CanonicalBaseURL)) }}
+<meta http-equiv="refresh" content="0; URL={{ .Site.Params.CanonicalBaseURL }}{{ .RelPermalink }}">
+{{ end }}
+ <script>{{ .Site.BaseURL }} ==? {{ .Site.Params.CanonicalBaseURL }}</script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:400" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:500" rel="stylesheet">
 <link rel="stylesheet" href="{{ "normalize.min.css" | absURL }}">
