--- a/themes/mybook/layouts/partials/docs/shared.html
+++ b/themes/mybook/layouts/partials/docs/shared.html
@@ -1,11 +1,11 @@
 <!-- These templates contains some more complex logic and shared between partials-->
 {{ define "title" }}
-  {{- if .Pages -}}
+  {{/*{{- if .Pages -}}
     {{ $sections := split (trim .Dir "/") "/" }}
     {{ $title := index ($sections | last 1) 0 | humanize | title }}
     {{- default $title .Title -}}
-  {{- else -}}
+  {{- else -}}*/}}
     {{ $title :=  .File | humanize | title }}
     {{- default $title .Title -}}
-  {{- end -}}
+  {{/*{{- end -}}*/}}
 {{ end }}
