--- a/themes/mybook/layouts/partials/docs/html-head.html
+++ b/themes/mybook/layouts/partials/docs/html-head.html
@@ -10,5 +10,5 @@
 <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:500" rel="stylesheet">
 <link rel="stylesheet" href="{{ "normalize.min.css" | absURL }}">
 <script src="{{ "intense.min.js" | absURL }}"></script>
-{{ $styles := resources.Get "book.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
+{{ $styles := resources.Get "book.scss" | css.Sass | resources.Minify | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $styles.RelPermalink }}">
